unpackaged/main/default/objects/Contact/fields/Age_Group__c.field-meta.xml
<CustomField>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Age_Group</valueSetName>
        </valueSet>
    </CustomField>