unpackaged/main/default/objects/Contact/fields/Appt_No_Show_Cancel_Reason__c.field-meta.xml
<CustomField>
        <fullName>Appt_No_Show_Cancel_Reason__c</fullName>
        <label>Appt No Show/Cancel Reason</label>
        <type>TextArea</type>
    </CustomField>