unpackaged/main/default/objects/Contact/fields/Are_you_transferring_to_the_area__c.field-meta.xml
<CustomField>
        <fullName>Are_you_transferring_to_the_area__c</fullName>
        <label>Are you transferring to the area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </CustomField>