unpackaged/main/default/objects/Contact/fields/Bathrooms__c.field-meta.xml
<CustomField>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bathrooms</valueSetName>
        </valueSet>
    </CustomField>