unpackaged/main/default/objects/Contact/fields/Bedrooms__c.field-meta.xml
<CustomField>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bedrooms</valueSetName>
        </valueSet>
    </CustomField>