unpackaged/main/default/objects/Contact/fields/Community_History_Cal__c.field-meta.xml
<CustomField>
        <fullName>Community_History_Cal__c</fullName>
        <label>Community History Cal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Cal</valueSetName>
        </valueSet>
    </CustomField>