unpackaged/main/default/objects/Contact/fields/Community_History_NorCal__c.field-meta.xml
<CustomField>
        <fullName>Community_History_NorCal__c</fullName>
        <label>Community History NorCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_NorCal</valueSetName>
        </valueSet>
    </CustomField>