unpackaged/main/default/objects/Contact/fields/Community_History_Tor__c.field-meta.xml
<CustomField>
        <fullName>Community_History_Tor__c</fullName>
        <label>Community History Tor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Tor</valueSetName>
        </valueSet>
    </CustomField>