unpackaged/main/default/objects/Contact/fields/Community_List_Aus__c.field-meta.xml
<CustomField>
        <fullName>Community_List_Aus__c</fullName>
        <label>Community List Aus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Aus</valueSetName>
        </valueSet>
    </CustomField>