unpackaged/main/default/objects/Contact/fields/Community_List_SoCal__c.field-meta.xml
<CustomField>
        <fullName>Community_List_SoCal__c</fullName>
        <label>Community List SoCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_SoCal</valueSetName>
        </valueSet>
    </CustomField>