unpackaged/main/default/objects/Contact/fields/Community_List_Wash__c.field-meta.xml
<CustomField>
        <fullName>Community_List_Wash__c</fullName>
        <label>Community List Wash</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Wash</valueSetName>
        </valueSet>
    </CustomField>