unpackaged/main/default/objects/Contact/fields/Community_Picklist_Edm__c.field-meta.xml
<CustomField>
        <fullName>Community_Picklist_Edm__c</fullName>
        <label>Community Picklist Edm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Edm</valueSetName>
        </valueSet>
    </CustomField>