unpackaged/main/default/objects/Contact/fields/Community_Picklist_Tor__c.field-meta.xml
<CustomField>
        <fullName>Community_Picklist_Tor__c</fullName>
        <label>Community Picklist Tor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Tor</valueSetName>
        </valueSet>
    </CustomField>