unpackaged/main/default/objects/Contact/fields/Community_Picklist_Wsh__c.field-meta.xml
<CustomField>
        <fullName>Community_Picklist_Wsh__c</fullName>
        <label>Contact Community Picklist Wsh</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </CustomField>