unpackaged/main/default/objects/Contact/fields/Consent_Received_Date__c.field-meta.xml
<CustomField>
        <fullName>Consent_Received_Date__c</fullName>
        <label>Consent Received Date</label>
        <type>Date</type>
    </CustomField>