unpackaged/main/default/objects/Contact/fields/Consent_Revocation_Received_Date__c.field-meta.xml
<CustomField>
        <fullName>Consent_Revocation_Received_Date__c</fullName>
        <label>Consent Revocation Received Date</label>
        <type>Date</type>
    </CustomField>