unpackaged/main/default/objects/Contact/fields/Contact_Preference__c.field-meta.xml
<CustomField>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Preference</valueSetName>
        </valueSet>
    </CustomField>