unpackaged/main/default/objects/Contact/fields/Date_of_First_Appointment__c.field-meta.xml
<CustomField>
        <fullName>Date_of_First_Appointment__c</fullName>
        <label>Date of First Appointment</label>
        <type>Date</type>
    </CustomField>