unpackaged/main/default/objects/Contact/fields/How_Was_Consent_Received__c.field-meta.xml
<CustomField>
        <fullName>How_Was_Consent_Received__c</fullName>
        <label>How Was Consent Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>How_Was_Consent_Received</valueSetName>
        </valueSet>
    </CustomField>