unpackaged/main/default/objects/Contact/fields/Interested_Community_history_WSH__c.field-meta.xml
<CustomField>
        <fullName>Interested_Community_history_WSH__c</fullName>
        <label>Interested Community history WSH</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>