unpackaged/main/default/objects/Contact/fields/Interested_Communtiy_WSH__c.field-meta.xml
<CustomField>
        <fullName>Interested_Communtiy_WSH__c</fullName>
        <label>Interested Communtiy WSH</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>