unpackaged/main/default/objects/Contact/fields/Preferred_Time_s_to_Visit__c.field-meta.xml
<CustomField>
        <fullName>Preferred_Time_s_to_Visit__c</fullName>
        <label>Preferred Time(s) to Visit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Time_s_to_Visit</valueSetName>
        </valueSet>
    </CustomField>