unpackaged/main/default/objects/Contact/recordTypes/Default.recordType-meta.xml
<RecordType>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </RecordType>