unpackaged/main/default/objects/Contact/listViews/Real_Estate_Agents.listView-meta.xml
<ListView>
        <fullName>Real_Estate_Agents</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Real_Estate_Agent</value>
        </filters>
        <label>Real Estate Agents</label>
    </ListView>